Changed splash page to be a flex container; added a header.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
 
 
     <body>
-        <header class="splash">
+        <header class="header">
+            <h3>Maddie's Blog</h3>
+        </header>
+
+
+        <div class="splashcontainer">
+            <div class="coverimage">
+                <img src="assets/png/dog_maddie.png">
+            </div>
+            <div class="titlebox">
+                <h1>"Have Fun Sniffin' Around"</h1>
+            </div>
             
-            <h1>Maddie's Blog</h1>
-        </header> 
+        </div> 
   
         <div class="main">  
             <h2>Check Out Some of My Favorite Things...</h2>
