fixed header and updated flex properties for splash page.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <img src="assets/png/dog_maddie.png">
             </div>
             <div class="titlebox">
-                <h1>"Have Fun Sniffin' Around"</h1>
+                <h1>"Have</h1>
+                <h1>Fun</h1>
+                <h1>Sniffin'</h1>
+                <h1>Around"</h1>
             </div>
             
         </div> 
