entirely revised header as a flex-container to create structure for navbar and header.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 
     <body>
         <header class="header">
-            <h4>Maddie's Blog</h4>
+            <div class="navbar">
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>Archive</a></li>
+                <li><a>Contact</a></li>
+                <li class="aboutMe"><a>About Me</a></li>
+            </ul>
+            </div>
+            <div class="headerTitle"><h4>Maddie's Blog</h4></div>
+            <div class="emptyBox"></div>
         </header>
+        
 
 
         <div class="splashcontainer">
