navbar changes at smaller media screen sizes.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="styles.css">
 
@@ -12,14 +13,17 @@
 
     <body>
         <header class="header">
-            <div class="navbar">
-            <ul>
-                <li><a>Home</a></li>
-                <li><a>Archive</a></li>
-                <li><a>Contact</a></li>
-                <li class="aboutMe"><a>About Me</a></li>
-            </ul>
-            </div>
+            <nav>
+                <ul>
+                    <li><a>Home</a></li>
+                    <li><a>Archive</a></li>
+                    <li><a>Contact</a></li>
+                    <li class="aboutMe"><a>About Me</a></li>
+                </ul>
+            </nav>
+            <nav class="navSmall">
+                <p>NAV</p>
+            </nav>
             <div class="headerTitle"><h4>Maddie's Blog</h4></div>
             <div class="emptyBox"></div>
         </header>
