--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
                     <li class="aboutMe"><a>About Me</a></li>
                 </ul>
             </nav>
-            <nav class="navSmall">
-                <p>NAV</p>
-            </nav>
+            <div class="emptyBox1">
+                <div class="navSmall">
+                    <button class="dropbtn">MENU</button>
+                    <div class="dropdownContent">
+                        <a href="#">Home</a>
+                        <a href="#">Archive</a>
+                        <a href="#">Contact</a>
+                        <a href="#">About Me</a>
+                    </div>    
+                </div>
+            </div>
+
+
             <div class="headerTitle"><h4>Maddie's Blog</h4></div>
             <div class="emptyBox"></div>
         </header>
